Change css to night mode

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -58,7 +58,7 @@ img {
   width: 100%;
   min-height:300px;
   vertical-align: middle;
-  background-color: $grey-color-light;
+  background-color: $grey-color-dark;
 }
 
 
@@ -132,7 +132,7 @@ a {
  */
 blockquote {
   color: $grey-color;
-  border-left: 4px solid $grey-color-light;
+  border-left: 4px solid $grey-color-dark;
   padding-left: $spacing-unit / 2;
   @include relative-font-size(1.125);
   letter-spacing: -1px;
