Add picture height (anti-loading-jank)

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -56,7 +56,7 @@ main {
  */
 img {
   width: 100%;
-  min-height:300px;
+  height:auto;
   vertical-align: middle;
   background-color: $grey-color-dark;
   border-radius:5px;
