--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,11 +10,11 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #fdfdfd !default;
-$background-color: #222 !default;
-$brand-color:      #2a7ae2 !default;
+$text-color:       #e5e5e5 !default;
+$background-color: #1a1a1a !default;
+$brand-color:      #b39259 !default;
 
-$grey-color:       #828282 !default;
+$grey-color:       #807a6e !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
