--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,12 +2,13 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-light;
+  border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-dark;
   min-height: $spacing-unit * 1.865;
-
-  // Positioning context for the mobile navigation icon
-  position: relative;
+  
+  position:fixed;
+  width: 100%;
+  background: $background-color
 }
 
 .site-title {
@@ -176,7 +177,7 @@
  * Page content
  */
 .page-content {
-  padding: $spacing-unit 0;
+  padding: ($spacing-unit * 3) 0 $spacing-unit 0;
   flex: 1;
 }
 
@@ -193,7 +194,7 @@
   list-style: none;
 
   > li {
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit * 2;
   }
 }
 
