--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -254,3 +254,14 @@
     }
   }
 }
+
+/**
+ * Tags
+ */
+.tags-list{
+  @include relative-font-size(2);
+  margin-bottom: $spacing-unit;
+}
+.post-tag-current{
+  text-decoration:underline;
+}
