--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <link rel="stylesheet" href="/css/lightbox.css">
-  <script type="text/javascript" src="/js/lightbox.js"></script>
+  <script type="text/javascript" src="{{ "/js/lightbox.js" | relative_url }}"></script>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
