--- a/_sass/_lightbox.scss
+++ b/_sass/_lightbox.scss
@@ -50,7 +50,7 @@
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
-    max-width: 900px;
+    max-width: 100%;
     max-height: 100%;
 }
 #lightbox .videoWrapperContainer .videoWrapper {
@@ -105,4 +105,26 @@ transform-origin: 50% 50%;
     -moz-user-select: none;    
     -ms-user-select: none;      
     user-select: none;
+}
+
+.lightbox-youtube{
+    position:relative;
+}
+
+.lightbox-youtube:after{
+    content: "";
+    position:absolute;
+    top: 50%;
+    right: 50%;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 0 30px 60px;
+    margin-top:-30px;
+    margin-right:-30px;
+    border-color: transparent transparent transparent $brand-color;
+}
+
+.lightbox-youtube:hover:after{
+    border-color: transparent transparent transparent $text-color;
 }
