--- a/_sass/_lightbox.scss
+++ b/_sass/_lightbox.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,0.85) center center / contain no-repeat;
+    background: rgba(0,0,0,0.6) center center / contain no-repeat;
     z-index: 9999999;
     line-height: 0;
     cursor: pointer;
@@ -50,7 +50,7 @@
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
-    max-width: 100%;
+    max-width: 800px;
     max-height: 100%;
 }
 #lightbox .videoWrapperContainer .videoWrapper {
