--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -123,6 +123,18 @@
   margin-left: 0;
 }
 
+.social-media-list {
+  li{
+    display:inline;
+  }
+  .username{
+    display:none;
+  }
+  a:hover .svg-icon{
+    fill: $text-color;
+  }
+}
+
 .footer-col-wrapper {
   @include relative-font-size(0.9375);
   color: $grey-color;
@@ -137,13 +149,13 @@
 }
 
 .footer-col-1 {
-  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-  width:         calc(35% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
+  width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-  width:         calc(20% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(10% - (#{$spacing-unit} / 2));
+  width:         calc(10% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
@@ -260,9 +272,9 @@
  * Tags
  */
 .tags-list{
-  @include relative-font-size(2);
-  margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit * 1.5;
 }
-.post-tag-current{
-  text-decoration:underline;
+#post-tag-current{
+  color: $text-color;
+  // text-decoration:underline;
 }
