--- a/_includes/tags-list.html
+++ b/_includes/tags-list.html
@@ -1,5 +1,6 @@
 <div class="tags-list">
+    <a href="{% link index.md %}" class="post-tag" {% if page.tag %}{% else %}id="post-tag-current"{% endif %}>#all</a>
     {% for tag in site.tags %}
-      <a href="{%link tags/{{ tag[0] | slugify }}.md %}" class="post-tag {% if tag[0] == page.tag %}post-tag-current{% endif %}" >#{{ tag[0] | slugify }}</a>
+      <a href="{%link tags/{{ tag[0] | slugify }}.md %}" class="post-tag" {% if tag[0] == page.tag %}id="post-tag-current"{% endif %} >#{{ tag[0] | slugify }}</a>
     {% endfor %}
 </div>
