--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,9 +14,10 @@ $text-color:       #e5e5e5 !default;
 $background-color: #1a1a1a !default;
 $brand-color:      #b39259 !default;
 
-$grey-color:       #999284 !default;
+$grey-color:       #A89987 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
+$grey-color-dark:  #544D43 !default;
+
 
 $table-text-align: left !default;
 
