--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   
   {{ content }}
   
-  <h1>{% include tags-list.html %}</h1>
+  {% include tags-list.html %}
 
   {% if page.tag %}
     {% assign posts = site.tags[page.tag] %}
