--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
 <div class="banner">
-    Want more ? Get the <a href="{{ site.subscribe_url }}">newsletter</a> monthly.
+    📰 Want more ? Get the <a href="{{ site.subscribe_url }}">newsletter</a> monthly. 📰
 </div>
   
