--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -211,7 +211,7 @@
   list-style: none;
 
   > li {
-    margin-bottom: $spacing-unit * 2;
+    margin-bottom: $spacing-unit;
   }
 }
 
@@ -221,7 +221,6 @@
 }
 
 .post-link {
-  display: block;
   @include relative-font-size(1.5);
 }
 
@@ -231,7 +230,10 @@
  * Posts
  */
 .post-header {
-  margin-bottom: $spacing-unit;
+  display: flex;
+  flex-wrap:wrap;
+  justify-content:space-between;
+  align-items: baseline;
 }
 
 .post-title {
